--- a/Practical/Practical5.html
+++ b/Practical/Practical5.html
@@ -22,22 +22,22 @@
     "blank" usemap="#map1" />
 
 <map name="map1">
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/index.html" shape="rect" 
+    <area target="blank" href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/index.html/index1.html" shape="rect" 
     coords="44,32,114,60">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-1.html"  shape="rect" 
+    <area target="blank" href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical1.html"  shape="rect" 
     coords="184,32,350,60">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-2.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical2.html" shape="rect" 
     coords="420,32,595,60">
     
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-3.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical3.html" shape="rect" 
     coords="676,32,850,60">
     
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-4.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical4.html" shape="rect" 
     coords="930,32,1105,60">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-5.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.html" shape="rect" 
     coords="1167,32,1350,60">
 </map>
 <h2> Introduction to Front-End Technologies</h2>
@@ -50,16 +50,16 @@
      "blank"
       usemap="#map2" />
 <map name="map2">
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-5.1.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.1.html" shape="rect" 
     coords= "24,7,204,200">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-5.2.html"  shape="circle" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.2.html"  shape="circle" 
     coords= "340,100,111">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-5.3.html" shape="rect" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.3.html" shape="rect" 
     coords= "27,230,205,402">
 
-    <area target="blank" href="https://mohittiwari-cs18.github.io/FullstackAssignment/p/practical-5.4.html" shape="poly" 
+    <area target="blank" href="github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.4.html" shape="poly" 
     coords= "270,261,340,236,415,261,402,356,343,391,282,356">
 
     <h3 style="color:red">Click on any part of logo to know more about these technologies.</h3>
