--- a/index.html/index1.html
+++ b/index.html/index1.html
@@ -1,66 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>HOMEPAGE</title>
 </head>
-<style>
-    body{
-        background-image: url(img/p53.jfif);
-        background-attachment: scroll;
 
-    }
-    #topbar{
-			width:250px;
-			margin:100px auto;
-			height:50px;
-			background-color:yellow;
-            text-align: center;
-            border:30px groove grey;
-			}
-
-
-            #topbar-text{
-              
-                color: red;
-                margin: 10px;
-                font-size: 250%;
-                font-family:'Lobster';
-                text-decoration: underline
-               ;
-                
-            }
-
-            #content{
-			width:1000px;
-			margin:0 auto;
-			height:200px;
-			background-color:rgba(128,255,0,0.5);
-            border:4px;
-            border-style: groove;
-			}
-            p{
-                color:white;
-                font-size: 150%;
-                font-family: 'Lobster';
-                text-align: center;
-            }
+<body style="background-color:blanchedalmond">
+    <h1 style="color:darkgreen">Welcome to Fullstack Course</h1>
+    <h2>About Course</h2>
+    <p>Front-end web development is everything involved in programming the user interface of a web application.Typically
+        it refers to the Hypertext Markup Language(HTML),Cascading Style Sheets(CSS) and JavaScript portion of website
+        production as opposed to the database or server-side programming. It encompasses everything from building a
+        simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various
+        different browsers, devices and screen sizes</p>
+    <h1 style="color:darkgreen">List of Practicals</h1>
+       1.Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment <a
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical1.html"> Practical-1</a> <br> <br>
+       2.Live your First Web-Page on Git-Hub. <a
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical2.html">Practical-2</a> <br> <br>
+       3.Creat a web page showing a basic html structure using character entities and span Tag. <a
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical3.html">Practical-3</a> <br><br>
+       4.Create a website having list of all practical and their individual practical Page links. <a
+                href="#"> Practical4</a> <br> <br>
+       5.Create a Web-Page showing the use of Image-map in the Web application. <a
+        href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical5.html">Practical-5</a>
 
 
-</style>
-</head>
-<body>
-    <div id="topbar">
-        <span id="topbar-text"> HTML </span>
-    </div>
-
-    <div id="content">
-        <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages. Hypertext refers to
-             the way in which Web pages (HTML documents) are linked together. Thus, the link available on a webpage is called
-              Hypertext.
-            As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" a text document with tags
-             that tell a Web browser how to structure it to display.</p>
-    </div>
 </body>
+
 </html>
