--- a/Practical/Practical4.html
+++ b/Practical/Practical4.html
@@ -17,13 +17,13 @@
         different browsers, devices and screen sizes</p>
     <h2 style="color:darkgreen">List of Practicals</h2>
        1.Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment <a
-                href="https://maheshwarinaman.github.io/V_Semester_FullStack/Practical/Practical_1.html"> Practical1</a> <br> <br>
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical1.html"> Practical1</a> <br> <br>
        2.Live your First Web-Page on Git-Hub. <a
-                href="https://maheshwarinaman.github.io/V_Semester_FullStack/Practical/Practical_2.html">Practical2</a> <br> <br>
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical2.html">Practical2</a> <br> <br>
        3.Creat a web page showing a basic html structure using character entities and span Tag. <a
-                href="https://maheshwarinaman.github.io/V_Semester_FullStack/Practical/Practical_3.html">Practical3</a> <br><br>
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical3.html">Practical3</a> <br><br>
        4.Create a website having list of all practical and their individual practical Page links. <a
-                href="https://maheshwarinaman.github.io/V_Semester_FullStack/Practical/Practical_4.html"> Practical4</a>
+                href="https://github.com/mrtripathi11/FullStackPracticals/blob/master/Practical/Practical4.html"> Practical4</a>
 
 
 </body>
